--- a/dotNet/docs/ChangeLog.txt
+++ b/dotNet/docs/ChangeLog.txt
@@ -1,7 +1,12 @@
+Future versions
+- Build system with gradle
+- Generate version for .Net 4.0 and 4.5.X
+- Use DumpObject or OBJECTDUMPER instead of the dump* methods
+
 v4.0.4
 - Fixes on technical documentation
 - Fixes on years copyright
-- Generate versions for .Net 4.0 and 4.5.X
+- Generate version for .Net 4.0
 - Use Configuration "Any CPU" to make OBTUtils portable across x86-x64 boundaries
 - Move on to GitHub ??
 - Added convertor from SQL table to Java POJOs (OBTSQL2POJO) 
